k8s/factorial-cache/k8s/factorial-cache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: factorial-ingress
  namespace: factorial
  annotations:
    nginx.ingress.kubernetes.io/user-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: ImplementationSpecific
            path: /math(/|$)(.*)
            backend:
              service:
                name: factorial-cache-service
                port:
                  number: 8080
